--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Roboto, sans-serif;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/learn-css-selectors-visual-rules/hypnotize_bg.png");
+  background-image: url("./resources/hypnotize_bg.png");
 }
 
 header {
@@ -16,6 +16,8 @@ footer .row {
 h1 {
   font-weight: 700;
   margin: 0;
+  color: rgb(99, 99, 99);
+  text-shadow: 1px 1px 1px rgb(163, 163, 163);
 }
 
 nav {
@@ -31,22 +33,43 @@ a {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/projects/personal_portfolio/background.jpeg");
   background-size: cover;
   color: #ffffff;
-  height: 400px;
+  height: 550px;
+}
+
+.index {
+  background-image: url("./resources/PANO_20190608_142402.vr.jpg");
+}
+
+#about {
+  background-image: url("./resources/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg");
+  background-size: cover;
+  background-position-y: -150px;
+}
+
+#experience {
+  background-image: url("./resources/green-chameleon-s9CC2SKySJM-unsplash.jpg");
+  background-position-y: -150px;
+}
+
+#education {
+  background-image: url("./resources/jess-bailey-l3N9Q27zULw-unsplash.jpg");
+  background-position-y: -350px;
 }
 
 .jumbotron h2 {
   font-size: 60px;
   font-weight: 700;
   margin: 0;
-  color: #fff;
+  text-shadow: 2px 2px 5px black;
+  color: rgb(247, 161, 63);
 }
 
 .jumbotron h3 {
-  margin: 0 0 20px;
-  color: #fff;
+  margin: 0 0 120px;
+  color: rgb(41, 41, 41);
+  text-shadow: 2px 2px 10px rgb(255, 255, 255);
 }
 
 section .row img {
@@ -77,8 +100,21 @@ section .row img {
 }
 
 .portrait {
-  width: 350px;
+  width: 200px;
   height: 300px;
+  border: 1.5px solid #746f6f;
+  border-radius: 2px;
+  box-shadow: 0px 0px 10px rgb(44, 44, 44);
+  border-radius: 5px;
+  transition: all 0.5s;
+  /* box-shadow: 5px 1px #888888; */
+  /* object-fit: fill; */
+}
+
+.portrait:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all 0.5s;
 }
 
 figure img {
@@ -91,6 +127,7 @@ figure {
 }
 
 footer {
+  margin-top: 30px;
   font-size: 12px;
   padding: 20px 0;
 }
@@ -102,4 +139,40 @@ footer .col-sm-8 {
 
 footer ul {
   list-style: none;
+}
+
+#img-quora {
+  width: 22px;
+  height: 22px;
+}
+
+#signature {
+  margin-top: 15px;
+  /* float: left; */
+}
+
+#my-pic {
+  box-shadow: 0px 0px 10px rgb(44, 44, 44);
+  border-radius: 5px;
+}
+
+#lang {
+  text-align: center;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  text-shadow: 0px 0px 1px rgb(141, 141, 141);
+}
+
+#lined {
+  border-top: 2px solid gray;
+}
+
+#lang-icons {
+  transform: scale(0.8);
+  transition: all 0.5s;
+}
+
+#lang-icons:hover {
+  transform: scale(1);
+  transition: all 0.5s;
 }
